# patch-automation

./: README.md  azure-pipelines.yml
patch automation/: .env.example  .gitignore  README.md  pyproject.toml
patch automation/src/rapid7_automox_sync/: __init__.py  automox.py  cli.py  http.py  models.py  rapid7.py  secrets.py  transform.py
patch automation/tests/: test_clients.py  test_secrets.py  test_transform.py
